Simple Code Cleanup